# coda

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .pre-commit-config.yml  Makefile  README.md  compose.local.yml  compose.production.yml  manage.py  pyproject.toml
.devcontainer/: devcontainer.json
.envs/.local/: coda.env  postgres.env
.envs/.production/: coda.env  django.env  postgres.env
.github/workflows/: docs.yml
config/: urls.py  wsgi.py
config/fixtures/: coar_resource_types_3_1.json  dfg_subject_classification.json  funding_organizations.json  linktypes.json
config/settings/: base.py  local.py  production.py  test.py
docker/: compose.local.yml
docker/dockerfiles/local/: Dockerfile.devcontainer
dockerfiles/local/: Dockerfile.devcontainer  entrypoint  start
dockerfiles/production/django/: Dockerfile  entrypoint  start
dockerfiles/production/nginx/: Dockerfile  default.conf
dockerfiles/production/postgres/: Dockerfile
docs/: Makefile  conf.py  fundingrequests.md  index.md
docs/_static/: custom.css  index.css  vars.css
docs/_templates/: index.html
docs/dev/: index.md
docs/roadmap/: index.md
docs/users/: about.md  index.md  installation.md
docs/users/features/: contracts.md  fundingrequests.md  index.md  invoices.md  reporting.md
scripts/: entrypoint.sh  generate_currencies.py
scripts/vocabularies/: __main__.py  _common.py  coar.py  dfg_subject_classification.py
src/coda/: author.py  authorlist.py  color.py  contract.py  date.py  doi.py  fundingrequest.py  invoice.py  issn.py  orcid.py  publication.py  string.py  validation.py
src/coda/apps/: fields.py  formbase.py  home.py  widgets.py  wizard.py
src/coda/apps/authors/: apps.py  dto.py  forms.py  models.py  repository.py  services.py  urls.py  views.py
src/coda/apps/authors/migrations/: 0001_initial.py  0002_remove_person_author_entries_author_details_and_more.py  0003_alter_person_orcid.py  0004_alter_author_affiliation.py  0005_remove_person_email_remove_person_name_author_email_and_more.py  0006_rename_details_author_identifier.py  0007_rename_person_personid.py  0008_author_roles.py
src/coda/apps/contracts/: apps.py  forms.py  models.py  partials.py  services.py  urls.py  views.py
src/coda/apps/contracts/migrations/: 0001_initial.py  0002_contract_journals.py  0002_rename_is_active_contract_active_status.py
src/coda/apps/fundingrequests/: apps.py  dto.py  forms.py  models.py  repository.py  services.py  urls.py  views.py  wizardsteps.py
src/coda/apps/fundingrequests/migrations/: 0001_initial.py  0002_alter_fundingrequest_processing_status.py  0002_fundingrequest_created_at_fundingrequest_updated_at_and_more.py  0003_alter_fundingrequest_payment_method_and_more.py  0003_fundingrequest_submitter_and_more.py  0004_alter_fundingrequest_payment_method_and_more.py  0012_fundingrequest_payment_method.py  (+12 more)
src/coda/apps/htmx/: forms.py
src/coda/apps/htmx_components/: apps.py  converters.py  forms.py
src/coda/apps/institutions/: apps.py  models.py  repository.py
src/coda/apps/invoices/: apps.py  forms.py  models.py  services.py  urls.py  views.py
src/coda/apps/journals/: apps.py  forms.py  models.py  repository.py  services.py  urls.py  views.py
src/coda/apps/management/: apps.py
src/coda/apps/preferences/: apps.py  forms.py  models.py  urls.py  views.py
src/coda/apps/publications/: apps.py  dto.py  forms.py  models.py  repository.py  services.py
src/coda/apps/publishers/: apps.py  models.py  urls.py  views.py
src/coda/apps/templates/: base.html  demo.html  generic_form_view.html
src/coda/apps/templatetags/: getlist.py  param_replace.py
src/coda/apps/users/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
src/coda/checks/: __init__.py  checklist.py  costlimit.py
src/coda/django_apps/users/: admin.py  apps.py  urls.py  views.py
src/coda/money/: __init__.py  _currency.py  _currencyexchange.py  _money.py  exchange.py  exchangeratesapi.py
tests/: assertions.py  conftest.py  domainfactory.py  dtofactory.py  factory.py  modelfactory.py  test_authorlist.py  test_cachingcurrencyexchange.py  test_color.py  test_issn.py  test_money.py  test_orcid.py  test_string.py  test_wizard.py
tests/authors/: test__author.py  test__orcid_field.py
tests/checks/: test_checklist.py  test_costlimit.py
tests/contracts/: test_contract.py
tests/domain/: test_author.py  test_contract.py  test_doi.py  test_fundingrequest.py  test_invoice.py  test_publication.py
tests/fundingrequests/: assertions.py  factory.py  test_create_fundingrequest.py  test_fundingrequest.py  test_fundingrequest_approve.py  test_fundingrequest_id.py  test_fundingrequest_labels.py  test_fundingrequest_repository.py  test_fundingrequest_search.py  test_fundingrequest_services.py  test_fundingrequest_wizard.py  test_label.py
tests/fundingrequests/wizard/: test_funding_step.py  test_journal_step.py  test_publication_step.py
tests/htmx/: test_converters.py  test_formset.py  urls.py  views.py
tests/invoices/: test_create_invoice_view.py  test_invoice_services.py
tests/money/: exchangeapi_result.json  test_cachingcurrencyexchange.py  test_exchangeratesapi.py  test_money.py
tests/publications/: test_publication_services.py
tests/templates/: htmx_formset_template.html  stepper_template.html
(+124 files in other folders)
